<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleMinesweeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/minesweeper"
        android:textColor="@color/white"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/descriptionMinesweeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/click_to_reveal_a_square_hold_click_to_mark_a_cell_as_suspicious"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMinesweeper"
        app:layout_constraintVertical_bias="0.031" />

    <!-- Image is microsoft's classic 1990 minesweeper logo, got from fandom.com/wiki/Microsoft_Minesweeper -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/minesweeper_logo"
        app:layout_constraintBottom_toTopOf="@+id/titleMinesweeper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/minesweeper_logo" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="301dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3A3A3A"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColorLink="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionMinesweeper" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="301dp"
        android:layout_height="71dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3A3A3A"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColorLink="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

</androidx.constraintlayout.widget.ConstraintLayout>