<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    tools:context=".SettingsActivity">


    <Button
        android:id="@+id/buttonSettingsSave"
        android:layout_width="301dp"
        android:layout_height="71dp"
        android:backgroundTint="#3A3A3A"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColorLink="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.067" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/labelSettingsMineCellColor"
            android:layout_width="254dp"
            android:layout_height="44dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/mine_color"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/spinnerMineCellColor"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/cell_color_options"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/labelSettingsFlaggedColor"
            android:layout_width="254dp"
            android:layout_height="44dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/flagged_color"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/spinnerFlaggedColor"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/cell_color_options"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/labelSettingsUncoveredColor"
            android:layout_width="254dp"
            android:layout_height="44dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/uncovered_color"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/spinnerUncoveredColor"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/cell_color_options"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleMinesweeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/minesweeper"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMinesweeper">

        <TextView
            android:id="@+id/labelSettingsRows"
            android:layout_width="254dp"
            android:layout_height="44dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/number_of_rows"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/spinnerRows"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/row_column_options"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/labelSettingsCols"
            android:layout_width="254dp"
            android:layout_height="44dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/number_of_cols"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/spinnerCols"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/row_column_options"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/labelSettingsPercentMines"
            android:layout_width="254dp"
            android:layout_height="44dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/percent_of_mines"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/spinnerPercentMines"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/mine_percentage_options"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/labelSettingsCoveredColor"
            android:layout_width="254dp"
            android:layout_height="44dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/covered_color"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/spinnerCoveredColor"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/cell_color_options"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>